Updating README to use ? instead of _.

--- a/README
+++ b/README
@@ -12,7 +12,7 @@ THE GAME'S RULES
 ALGORITHMS
     This was a challenge to myself to find a set of algorithms to give the most optimal words in Hanging with Friends going both directions: in giving words for others to guess and guessing words others give.
     The current algorithm for building words for others to guess takes the letters you're given and finds the set of acceptable words that can be built with the letters you hold, then ranks them first by the number of unique letters they have in them (with the premise that 8 unique letters gives them the least hint as to the structure of the word) and then ranked by Scrabble score (which should give a relatively good ranking of the rarity of the letters in the words) with the hopes that this will give the hardest words to guess. [Check the FUTURE PLANS section for more information regarding improving this algorithm for tricking cheat programs.]
-    The guessing algorithm is subtle, but works amazingly well. It searches through the list of acceptable words given the letters you know are in the word (say you're guessing 'tipping' and have guessed 'ing' and 'k,' you'd put in '_i__ing k'), then takes all words that match the parameters and gives you the listing of the letters that appear in the most words. This is fantastic because it gives you the letter most likely to be in the current word... but even if it's not, it's the letter that eliminates the greatest number of words from the list.
+    The guessing algorithm is subtle, but works amazingly well. It searches through the list of acceptable words given the letters you know are in the word (say you're guessing 'tipping' and have guessed 'ing' and 'k,' you'd put in '?i??ing k'), then takes all words that match the parameters and gives you the listing of the letters that appear in the most words. This is fantastic because it gives you the letter most likely to be in the current word... but even if it's not, it's the letter that eliminates the greatest number of words from the list.
     I've considered improving this algorithm with suffix and prefix detection and other such things, but if you think about it, this is unneccessary: if there are a lot of words ending with "ing" of the right length with the right letters in the blanks, [i,n,g] will show up as most likely letters and be eliminated or confirmed. It's a robust algorithm due to its being based on the statistics inherent in the word list.
 
 FUTURE PLANS
